fix: 修复setting页面的dark mode下的显示问题 (#348)

--- a/src/_app-theme.scss
+++ b/src/_app-theme.scss
@@ -3,6 +3,7 @@
 @use './styles/apexcharts' as apexcharts-theme;
 @use './styles/input' as input-theme;
 @use './app/routes/room/room-list/room-list-theme';
+@use './app/routes/settings/settings-theme';
 @use './app/shared/components/error-code/error-code-theme';
 @use './app//shared/components//navbar/navbar-theme';
 @use './app/shared/components/page-header/page-header-theme';
@@ -11,6 +12,7 @@
 @mixin hoteler-app-theme($theme) {
 
   @include room-list-theme.hoteler-room-list-theme($theme);
+  @include settings-theme.hoteler-settings-theme($theme);
   @include error-code-theme.hoteler-error-code-theme($theme);
   @include navbar-theme.hoteler-navbar-theme($theme);
   @include page-header-theme.hoteler-page-header-theme($theme);
